--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         .ui-panel { 
             position: absolute; bottom: 70px; left: 50%; transform: translateX(-50%); 
             background: rgba(20,20,20,0.95); padding: 15px; border-radius: 20px; 
-            display: flex; flex-direction: column; gap: 12px; width: 85%; max-width: 320px; 
+            display: flex; flex-direction: column; gap: 12px; width: 85%; 
+            max-width: 280px; /* Сужено, чтобы не перекрывать кнопки */
             border: 1px solid rgba(255,255,255,0.1); z-index: 110; transition: 0.3s; 
         }
         .ui-panel.hidden { opacity: 0; transform: translateX(-50%) translateY(100px); pointer-events: none; }
@@ -114,7 +115,6 @@
                 <hr style="margin:8px 0; border:0; border-top:1px solid rgba(255,255,255,0.1);">
                 <p><b>EN:</b> Clearing browser cache will delete slot data! Use <b>💾 (Floppy)</b> to save your project as a permanent file.</p>
             </div>
-
             <h4>РУКОВОДСТВО (RU)</h4>
             <ul>
                 <li><b>Слоты 1-3</b>: работа с 3 схемами сразу.</li>
@@ -124,14 +124,12 @@
                 <li><b>🗑️ Корзина</b>: очистка рисунков или всего.</li>
                 <li><b>📷 Камера</b>: загрузить схему в слот.</li>
             </ul>
-
             <h4>USER MANUAL (EN)</h4>
             <ul>
                 <li><b>Slots 1-3</b>: 3 patterns simultaneously.</li>
                 <li><b>👁️ Eye</b>: Fullscreen + Screen Wake Lock.</li>
                 <li><b>💾 Floppy</b>: Download project (Permanent).</li>
                 <li><b>➖ / ✍️ / T</b>: Row line, draw, or text notes.</li>
-                <li><b>🗑️ Trash</b>: Clear drawings or everything.</li>
             </ul>
         </div>
         <button class="btn" style="width:100%" onclick="document.getElementById('help-modal').style.display='none'">OK</button>
@@ -308,37 +306,4 @@ const app = {
     },
 
     loop() { this.render(); requestAnimationFrame(() => this.loop()); },
-    save() { localStorage.setItem('slot_' + this.currentSlot, JSON.stringify({st: this.st, img: this.rawImgData, name: this.fname})); },
-    setMode(m) { this.st.mode = m; document.getElementById('bL').className = 'btn'+(m==='line'?' active':''); document.getElementById('bD').className = 'btn'+(m==='draw'?' active':''); document.getElementById('bT').className = 'btn'+(m==='text'?' active':''); },
-    updateSize(v) { this.st.th = v; this.save(); },
-    setColor(c, el) { this.st.col = c; document.querySelectorAll('.color-dot').forEach(d => d.classList.remove('active')); el.classList.add('active'); this.save(); },
-    rotate() { this.st.rot = (this.st.rot + 90) % 360; this.save(); },
-    
-    clear() { 
-        const choice = prompt("What to clear?\n1 - All\n2 - Drawings only\n3 - Notes only");
-        if (choice === "1") { this.st.paths = []; this.st.notes = []; }
-        else if (choice === "2") { this.st.paths = []; }
-        else if (choice === "3") { this.st.notes = []; }
-        if (choice) this.save();
-    },
-    
-    saveAsFile() {
-        if (!this.rawImgData) { alert("Load image first!"); return; }
-        const name = prompt("Save name:"); if (!name) return;
-        let docClone = document.documentElement.cloneNode(true);
-        docClone.querySelector('#app-state-loader').textContent = `window.PRELOADED_STATE = ${JSON.stringify(this.st)}; window.PRELOADED_IMAGE = "${this.rawImgData}";`;
-        const blob = new Blob([docClone.outerHTML], {type: 'text/html'});
-        const a = document.createElement('a'); a.href = URL.createObjectURL(blob); a.download = name + ".html"; a.click();
-    },
-
-    hFile(input) {
-        const f = input.files[0]; if (!f) return;
-        this.fname = f.name;
-        const r = new FileReader(); r.onload = e => { this.rawImgData = e.target.result; this.loadImg(this.rawImgData); this.save(); };
-        r.readAsDataURL(f);
-    }
-};
-app.init();
-</script>
-</body>
-</html>
+    save() { localStorage.setItem('slot_' + this.currentSlot, JSON.stringify({st: this.st, img: this.rawImgData
