--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         .help-section { text-align: left; font-size: 13px; line-height: 1.5; margin-bottom: 20px; }
         .help-section h4 { color: #9333ea; margin: 15px 0 5px 0; border-bottom: 1px solid #333; padding-bottom: 3px; }
         .help-section ul { padding-left: 18px; color: #ccc; }
+        .warning-box { background: rgba(239, 68, 68, 0.1); border: 1px solid #ef4444; padding: 10px; border-radius: 12px; margin-top: 15px; color: #fca5a5; font-size: 12px; }
 
         .row { display: flex; align-items: center; gap: 10px; font-size: 10px; color: #aaa; text-transform: uppercase; }
         input[type="range"] { flex: 1; accent-color: #9333ea; }
@@ -115,6 +116,9 @@
                 <li><b>🗑️ Корзина</b>: очистка рисунков или всего.</li>
                 <li><b>📷 Камера</b>: загрузить схему в слот.</li>
             </ul>
+            <div class="warning-box">
+                <b>ВНИМАНИЕ:</b> Браузер может очистить память. Чтобы не потерять прогресс, сохраняйте проект кнопкой 💾 на устройство!
+            </div>
             <h4>MANUAL (EN)</h4>
             <ul>
                 <li><b>Slots 1-3</b>: 3 patterns at once.</li>
