--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
         }
         .tab.active { background: #262626; color: #9333ea; border-bottom: 2px solid #9333ea; }
 
-        /* Modal windows */
         .modal {
             position: fixed; inset: 0; background: rgba(0,0,0,0.85);
             display: none; align-items: center; justify-content: center; z-index: 300; padding: 20px;
@@ -58,7 +57,7 @@
         .help-section { text-align: left; font-size: 13px; line-height: 1.5; margin-bottom: 20px; }
         .help-section h4 { color: #9333ea; margin: 15px 0 5px 0; border-bottom: 1px solid #333; padding-bottom: 3px; }
         .help-section ul { padding-left: 18px; color: #ccc; }
-        .warning-box { background: rgba(239, 68, 68, 0.1); border: 1px solid #ef4444; padding: 10px; border-radius: 12px; margin-top: 15px; color: #fca5a5; font-size: 12px; }
+        .warning-box { background: rgba(239, 68, 68, 0.1); border: 1px solid #ef4444; padding: 10px; border-radius: 12px; color: #fca5a5; font-size: 12px; }
 
         .row { display: flex; align-items: center; gap: 10px; font-size: 10px; color: #aaa; text-transform: uppercase; }
         input[type="range"] { flex: 1; accent-color: #9333ea; }
@@ -107,26 +106,20 @@
 <div id="help-modal" class="modal" onclick="this.style.display='none'">
     <div class="modal-content" onclick="event.stopPropagation()">
         <div class="help-section">
-            <h4>РУКОВОДСТВО (RU)</h4>
-            <ul>
-                <li><b>Слоты 1-3</b>: работайте с 3 схемами сразу.</li>
-                <li><b>👁️ Глаз</b>: полный экран + запрет гаснуть.</li>
-                <li><b>💾 Дискета</b>: сохранить проект в файл.</li>
-                <li><b>➖ / ✍️ / T</b>: линия ряда, рисование и заметки.</li>
-                <li><b>🗑️ Корзина</b>: очистка рисунков или всего.</li>
-                <li><b>📷 Камера</b>: загрузить схему в слот.</li>
-            </ul>
-            <div class="warning-box">
-                <b>ВНИМАНИЕ:</b> Браузер может очистить память. Чтобы не потерять прогресс, сохраняйте проект кнопкой 💾 на устройство!
+            <div class="warning-box" style="margin-top:0; margin-bottom:15px; text-align:center;">
+                <b>ВНИМАНИЕ / ATTENTION:</b><br>
+                Браузер может очистить память. Сохраняйте проект кнопкой 💾 на устройство!<br>
+                Browser may clear cache. Save project to your device using 💾 button!
             </div>
-            <h4>MANUAL (EN)</h4>
+            
+            <h4>MANUAL / СПРАВКА</h4>
             <ul>
-                <li><b>Slots 1-3</b>: 3 patterns at once.</li>
-                <li><b>👁️ Eye</b>: Fullscreen + Wake Lock.</li>
-                <li><b>💾 Floppy</b>: Save project to file.</li>
-                <li><b>➖ / ✍️ / T</b>: Row line, draw, or notes.</li>
-                <li><b>🗑️ Trash</b>: Clear layers or everything.</li>
-                <li><b>📷 Camera</b>: Upload pattern to slot.</li>
+                <li><b>Slots 1-3 / Слоты</b>: 3 patterns / 3 схемы.</li>
+                <li><b>👁️ Eye / Глаз</b>: Fullscreen + Wake Lock / Полный экран.</li>
+                <li><b>💾 Floppy / Дискета</b>: Save project / Сохранить в файл.</li>
+                <li><b>➖ / ✍️ / T</b>: Line, draw, notes / Линия, рисунок, текст.</li>
+                <li><b>🗑️ Trash / Корзина</b>: Clear / Очистить.</li>
+                <li><b>📷 Camera / Камера</b>: Upload pattern / Загрузить схему.</li>
             </ul>
         </div>
         <button class="btn" style="width:100%" onclick="document.getElementById('help-modal').style.display='none'">OK</button>
