--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div style="height:2px"></div>
     <button class="btn" onclick="app.rotate()">🔄</button>
     <button class="btn" onclick="document.getElementById('fi').click()">📷</button>
-    <<button class="btn" onclick="document.getElementById('kofi-modal').style.display='flex'">☕️</button>
+    <button class="btn" onclick="document.getElementById('kofi-modal').style.display='flex'">☕️</button>
 </div>
 
 <div class="ui-panel" id="ui">
